@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Tue 12 Oct 12:20:54 BST 2021]"
-BUILD = "10121220"
+VERSION = "45u [Fri 15 Oct 09:44:58 BST 2021]"
+BUILD = "10150944"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
